<resources>
    <string name="app_name">TGuide</string>

    <string name="tab_home">首页</string>
    <string name="tab_business">推荐</string>
    <string name="tab_found">工具</string>
    <string name="tab_mine">我的</string>

    <string name="voiceexplain">语音导游</string>
    <string name="voiceexplain_des">景区语音讲解</string>
    <string name="smartmap">景区地图</string>
    <string name="smartmap_des">景区位置查询</string>
    <string name="talentlive">导游直播</string>
    <string name="talentlive_des">观看导游带团</string>
    <string name="lingyou">行程助手</string>
    <string name="lingyou_des">私人定制出行</string>

    <string name="mine_default_sign">旅游,从这里开始!</string>
    <string name="home_search_hint">请输入景区名，查看景区语音导游</string>
    <string name="search_hint">输入景区、酒店、餐饮、特产店等</string>

    <string name="pop_default_circle">全部商圈</string>
    <string name="pop_tour_main">全部</string>
    <string name="pop_default_sort">默认排序</string>
    <string name="pop_region_sort">区域</string>

    <string name="city_hotcity_searchedittext_hint">请输入城市名,首字母或拼音</string>

    <string name="city_hotcity_curlocationcity_text">定位城市</string>
    <string name="city_show_text_hot">热门城市</string>
    <string name="third_title_close">关闭</string>
    <string name="locating">定位中</string>


</resources>
